--- a/practice/index.html
+++ b/practice/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio | Welcome</title>
 </head>
 <body>
+    <div class="home-container">
+        
+    </div>
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Austin Beaufort Portfolio</h1>
+                <h1> Austin Beaufort</h1>
             </div>
             <nav class="nav">
                 <ul>
@@ -23,38 +27,65 @@
         </div>
     </header>
 
-    <section class="showcase">
-        <div class="container">
-            <div class="slogan">
-                    <p>Things I Like:<p>
-                    <ul>
-                        <li>✔ Clear Communication / Teamwork ❤</li>
-                        <li>✔ Clean / Readable Code ❤</li>
-                        <li>☕ Coffee ❤</li>
-                    </ul>
-            </div>    
+    <section class="sidebar">
+        <div class="icon-bar">
+            <a href="#" class="medium"><i class="fab fa-medium-m"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="github"><i class="fab fa-github"></i></a>
+            <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
         </div>
     </section>
 
-    <section class="projects">
+    <section class="cards">
         <div class="container">
-            <article class="project1">
-                <img src="./../img/traffic.PNG" alt="project1">
-                <h1>Title 1</h1>
-                <p>This is project 1 description.</p>
-            </article>
-            <article class="project2">
-                <img src="./../img/traffic.PNG" alt="project2">
-                <h1>Title 2</h1>
-                <p>This is project 2 description.</p>
-            </article>
-            <article class="project3">
-                <img src="./../img/traffic.PNG" alt="project3">
-                <h1>Title 3</h1>
-                <p>This is project 3 description.</p>
-            </article>
+            <div class="flip">
+                <div class="front" style="background-image:url(./../img/small_austin.jpg)">
+                    <h1 class="text">Hi, I'm Austin!</h1>
+                </div>
+                <div class="back">
+                    <h2>Biography</h2>
+                    <p>I code stuff.I code stuff.I code stuff.
+                        I code stuff.I code stuff.I code stuff.
+                        I code stuff.
+                    </p>
+                </div>
+            </div>
+            <div class="flip">
+                <div class="front" style="background-image:url(./../img/small_austin.jpg)">
+                    <h1 class="text">Hi, I'm Austin!</h1>
+                </div>
+                <div class="back">
+                    <h2>Biography</h2>
+                    <p>I code stuff.I code stuff.I code stuff.
+                        I code stuff.I code stuff.I code stuff.
+                        I code stuff.
+                    </p>
+                </div>
+            </div>
+            <div class="flip">
+                <div class="front" style="background-image:url(./../img/small_austin.jpg)">
+                    <h1 class="text">Hi, I'm Austin!</h1>
+                </div>
+                <div class="back">
+                    <h2>Biography</h2>
+                    <p>I code stuff.I code stuff.I code stuff.
+                        I code stuff.I code stuff.I code stuff.
+                        I code stuff.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <section class="projectsButton">
+        <h1>Projects</h1>
+        <a href="#"></a>
+        <span>Scroll</span>
+    </section>
+
+
+
 
 
     <script src="app.js"></script>
