4th Commit, index.html and about.html sections are complete

--- a/practice/contacts.html
+++ b/practice/contacts.html
@@ -24,7 +24,7 @@
     </header>
 
     <section class="contacts">
-        <div class="container">
+        <div class="all-contacts">
             
         </div>
     </section>
