--- a/practice/contacts.html
+++ b/practice/contacts.html
@@ -25,7 +25,22 @@
 
     <section class="contacts">
         <div class="all-contacts">
-
+            <section class="thanks">
+                <h1>Thanks for taking the time to view my portfolio. I look forward to working with you!!!</h1>
+            </section>
+            <section class="phone">
+                <h1>Call me:  <a href="tel:+1-216-785-7643">+1 (216) 785-7643</a></h1>
+            </section>
+            <section class="form">
+                <form class="contact-form" action="mailto:austinbeaufort7@gmail.com" method="post" enctype="text/plain">
+                    <h1>Get in Touch</h1>
+                    <input class="full-name" type="text" name="name" placeholder="Full Name" required>
+                    <input class="email" type="email" name="email" placeholder="Your Email" required>
+                    <input class="subject" type="subject" name="subject" placeholder="Subject" required>
+                    <textarea class="message" name="message" placeholder="Enter Your Message Here" rows="3" required></textarea>
+                    <button type="submit" title="Submit contact form" value="Send">SEND</button>
+                </form>
+            </section>
         </div>
     </section>
 <script src="app.js"></script>
