Working on Responsiveness, Desktop Version 1.0 Complete.

--- a/practice/index.html
+++ b/practice/index.html
@@ -13,11 +13,12 @@
     <div class="background-container">
         <section class="sidebar">
             <div class="icon-bar">
-                <a href="#" class="medium"><i class="fab fa-medium-m"></i></a>
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
-                <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                <a href="https://medium.com/@austinbeaufort" target="blank" class="medium"><i class="fab fa-medium-m"></i></a>
+                <a href="https://twitter.com/BeaufortAustin" target="blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/austin-beaufort-948624179/" target="blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/austinbeaufort/" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCUTKXJqFhBb4YlnkEQYIvQg" target="blank" class="youtube"><i class="fab fa-youtube"></i></a>
+                <a href="https://codepen.io/tinyhatcoding/" target="blank"><i class="fab fa-codepen"></i></a> 
             </div>
         </section>
         
@@ -40,17 +41,17 @@
             <section class="cards">
                 <div class="container">
                     <div class="flip flip1">
-                        <div class="front" style="background-image:url(./../img/stickman4.jpg)">
+                        <div class="front" style="background-image:url(./../img/stickman5.jpg)">
                             <h1 class="text">Why Hire Me?</h1>
                         </div>
                         <div class="back">
-                            <h2>Soft Skills</h2>
+                            <h2>Team Player</h2>
                             <ul>
                                 <li>Communication</li>
                                 <li>Adapatability</li>
                                 <li>Detail Oriented</li>
                                 <li>I am driven by learning and enjoy helping others.</li>
-                                <button class="flip-button">Learn More</button>
+                                <a href="./about.html"><button class="flip-button">Learn More</button></a> 
                             </ul>
                         </div>
                     </div>
@@ -75,10 +76,14 @@
                             <h1 class="text">The Journey</h1>
                         </div>
                         <div class="back">
-                            <h2>Skillset:</h2>
-                            <ul>
-    
-                            </ul>
+                            <h2>Work Hard, Play Hard</h2>
+                            <p>
+                                I keep a blog with full details of my 
+                                web developer learning experiences, growth,
+                                and challenges every day. Great way to 
+                                get a deeper look into my thought process!
+                            </p>
+                            <a href="https://medium.com/@austinbeaufort" target="blank"><button class="flip-button">View Blog</button></a>
                         </div>
                     </div>
                 </div>
@@ -97,8 +102,8 @@
                         <img src="./../img/project1.PNG" alt="">
                         <p>Tools: HTML, CSS, JavaScript, pokeAPI</p>
                         <p>Skills: Used XMLHttpRequest() to access an API, fetch data, and use the data in a meaningful way.</p>
-                        <button class="button button1">View the App</button>
-                        <button class="button button2">Github Code!</button>
+                        <a href="https://austinbeaufort.github.io/pokemon-app/" target="blank"><button class="button button1">View the App</button></a>
+                        <a href="https://github.com/austinbeaufort/pokemon-app" target="blank"><button class="button button2">Github Code!</button></a>
                         <h2>Next Project</h2>
                         <i class="arrow1 fas fa-arrow-down"></i>
                     </div>
@@ -110,8 +115,8 @@
                     <img src="./../img/project2.PNG" alt="">
                     <p>Tools: FlexBox, jQuery, HTML, CSS, Media Queries</p>
                     <p>Skills: Use of setTimeout() browser API. CSS Flexbox Layout used for lights. jQuery for toggling classes and onload(). Responsive Design.</p>
-                    <button class="button button1">View the App</button>
-                    <button class="button button2">Github Code!</button>
+                    <a href="https://austinbeaufort.github.io/traffic-light/" target="blank"><button class="button button1">View the App</button></a>
+                    <a href="https://github.com/austinbeaufort/traffic-light" target="blank"><button class="button button2">Github Code!</button></a>
                     <h2>Next Project</h2>
                     <i class="arrow2 fas fa-arrow-down"></i>
                 </div>
@@ -123,8 +128,8 @@
                     <img src="./../img/project3.PNG" alt="">
                     <p>Tools: Web Audio API, CSS Grid, media Queries, JavaScript</p>
                     <p>Skills: Use of html5 audio tags and the browser's Web Audio API combined with CSS Grid for layout to bring this children's app to life.</p>
-                    <button class="button button1">View the App</button>
-                    <button class="button button2">Github Code!</button>
+                    <a href="https://austinbeaufort.github.io/elementarySchool-app/" target="blank"><button class="button button1">View the App</button></a> 
+                    <a href="https://github.com/austinbeaufort/elementarySchool-app" target="blank"><button class="button button2">Github Code!</button></a> 
                     <h2>Contact Me!</h2>
                     <a href="./contacts.html"><i class="arrow3 fas fa-arrow-right"></i></a>
                 </div>
