--- a/practice/contacts.html
+++ b/practice/contacts.html
@@ -4,45 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio | Welcome</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Austin Beaufort Portfolio</h1>
+    <div class="contacts-container">
+        <header>
+            <div class="container">
+                <div class="logo">
+                    <h1>Austin Beaufort Portfolio</h1>
+                </div>
+                <nav class="nav">
+                    <ul>
+                        <a href="./index.html"><li class="home">Home</li></a>
+                        <a href="./about.html"><li class="about">About</li></a>
+                        <a class="active" href="#"><li class="contacts">Contacts</li></a>
+                    </ul>
+                </nav>
             </div>
-            <nav class="nav">
-                <ul>
-                    <a href="./index.html"><li class="home">Home</li></a>
-                    <a href="./about.html"><li class="about">About</li></a>
-                    <a class="active" href="#"><li class="contacts">Contacts</li></a>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        </header>
+        
+        <section class="sidebar">
+            <div class="icon-bar">
+                <a href="https://medium.com/@austinbeaufort" target="blank" class="medium"><i class="fab fa-medium-m"></i></a>
+                <a href="https://twitter.com/BeaufortAustin" target="blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/austin-beaufort-948624179/" target="blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/austinbeaufort/" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCUTKXJqFhBb4YlnkEQYIvQg" target="blank" class="youtube"><i class="fab fa-youtube"></i></a>
+                <a href="https://codepen.io/tinyhatcoding/" target="blank"><i class="fab fa-codepen"></i></a> 
+            </div>
+        </section>
+        
+        <section class="contacts">
+            <div class="all-contacts">
+                <div class="contacts-top">
+                    <section class="thanks">
+                        <h1>Thanks for taking the time to view my portfolio. I look forward to working with you!!!</h1>
+                    </section>
+                    <section class="phone">
+                        <h1>Call me: <a href="tel:+1-216-785-7643">+1 (216) 785-7643</a></h1>
+                    </section>
+                </div>
+                <section class="form">
+                    <form class="contact-form" action="mailto:austinbeaufort7@gmail.com" method="post" enctype="text/plain">
+                        <h1>Get in Touch</h1>
+                        <input class="full-name" type="text" name="name" placeholder="Full Name" required>
+                        <input class="email" type="email" name="email" placeholder="Your Email" required>
+                        <input class="subject" type="subject" name="subject" placeholder="Subject" required>
+                        <textarea class="message" name="message" placeholder="Enter Your Message Here" rows="3" required></textarea>
+                        <button type="submit" title="Submit contact form" value="Send">SEND</button>
+                    </form>
+                </section>
+            </div>
+        </section>
+    </div>
 
-    <section class="contacts">
-        <div class="all-contacts">
-            <section class="thanks">
-                <h1>Thanks for taking the time to view my portfolio. I look forward to working with you!!!</h1>
-            </section>
-            <section class="phone">
-                <h1>Call me:  <a href="tel:+1-216-785-7643">+1 (216) 785-7643</a></h1>
-            </section>
-            <section class="form">
-                <form class="contact-form" action="mailto:austinbeaufort7@gmail.com" method="post" enctype="text/plain">
-                    <h1>Get in Touch</h1>
-                    <input class="full-name" type="text" name="name" placeholder="Full Name" required>
-                    <input class="email" type="email" name="email" placeholder="Your Email" required>
-                    <input class="subject" type="subject" name="subject" placeholder="Subject" required>
-                    <textarea class="message" name="message" placeholder="Enter Your Message Here" rows="3" required></textarea>
-                    <button type="submit" title="Submit contact form" value="Send">SEND</button>
-                </form>
-            </section>
-        </div>
-    </section>
 <script src="app.js"></script>
 </body>
 </html>
