attempt1 to fix site display, not displaying on gitpages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="cards">
                 <div class="container">
                     <div class="flip flip1">
-                        <div class="front" style="background-image:url(./../img/stickman5.jpg)">
+                        <div class="front">
                             <h1 class="text">Why Hire Me?</h1>
                         </div>
                         <div class="back">
@@ -51,12 +51,12 @@
                                 <li>Adapatability</li>
                                 <li>Detail Oriented</li>
                                 <li>I am driven by learning and enjoy helping others.</li>
-                                <a href="./about.html"><button class="flip-button">Learn More</button></a> 
+                                <a href="./about.html"><button class="flip-button flip-button2">Learn More</button></a> 
                             </ul>
                         </div>
                     </div>
                     <div class="flip flip2">
-                        <div class="front" style="background-image:url(./../img/small_austin.jpg)">
+                        <div class="front">
                             <h1 class="text">Hi, I'm Austin!</h1>
                         </div>
                         <div class="back">
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="flip flip3">
-                        <div class="front" style="background-image:url(./../img/theJourney.jpg)">
+                        <div class="front">
                             <h1 class="text">The Journey</h1>
                         </div>
                         <div class="back">
@@ -99,7 +99,7 @@
             <section class="global-container project" id="project1">
                     <div class="container">
                         <h1>Pokemon App</h1>
-                        <img src="./../img/project1.PNG" alt="">
+                        <img src="./img/project1.PNG" alt="">
                         <p>Tools: HTML, CSS, JavaScript, pokeAPI</p>
                         <p>Skills: Used XMLHttpRequest() to access an API, fetch data, and use the data in a meaningful way.</p>
                         <a href="https://austinbeaufort.github.io/pokemon-app/" target="blank"><button class="button button1">View the App</button></a>
@@ -112,7 +112,7 @@
             <section class="global-container project" id="project2">
                 <div class="container">
                     <h1>Traffic Light App</h1>
-                    <img src="./../img/project2.PNG" alt="">
+                    <img src="./img/project2.PNG" alt="">
                     <p>Tools: FlexBox, jQuery, HTML, CSS, Media Queries</p>
                     <p>Skills: Use of setTimeout() browser API. CSS Flexbox Layout used for lights. jQuery for toggling classes and onload(). Responsive Design.</p>
                     <a href="https://austinbeaufort.github.io/traffic-light/" target="blank"><button class="button button1">View the App</button></a>
@@ -125,7 +125,7 @@
             <section class="global-container project" id="project3">
                 <div class="container">
                     <h1>Elementary School App</h1>
-                    <img src="./../img/project3.PNG" alt="">
+                    <img src="./img/project3.PNG" alt="">
                     <p>Tools: Web Audio API, CSS Grid, media Queries, JavaScript</p>
                     <p>Skills: Use of html5 audio tags and the browser's Web Audio API combined with CSS Grid for layout to bring this children's app to life.</p>
                     <a href="https://austinbeaufort.github.io/elementarySchool-app/" target="blank"><button class="button button1">View the App</button></a> 
