Responsive Ipad Check

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="cards">
                 <div class="container">
                     <div class="flip flip1">
-                        <div class="front">
+                        <div class="front flip1-front">
                             <h1 class="text">Why Hire Me?</h1>
                         </div>
                         <div class="back">
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="flip flip2">
-                        <div class="front">
+                        <div class="front flip2-front">
                             <h1 class="text">Hi, I'm Austin!</h1>
                         </div>
                         <div class="back">
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="flip flip3">
-                        <div class="front">
+                        <div class="front flip3-front">
                             <h1 class="text">The Journey</h1>
                         </div>
                         <div class="back">
