--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
             </section>
         </div> 
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
